--- a/cinema-user/src/main/resources/application-test.yml
+++ b/cinema-user/src/main/resources/application-test.yml
@@ -2,5 +2,4 @@ spring:
   datasource:
     url: jdbc:tc:postgresql:13.2:///tests-db
   flyway:
-    enabled: true
-    currentSchema: tests-db
+    schemas: tests-db
